--- a/usbCameraCommon/build.gradle
+++ b/usbCameraCommon/build.gradle
@@ -43,16 +43,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+
 }
 
 dependencies {
 	api fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation "com.android.support:support-v4:${supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
 	implementation "com.android.support:support-annotations:${supportLibVersion}"
-
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-   		exclude module: 'support-v4'
-   	}
+    implementation(name:'common-2.12.4', ext:'aar')
+//	implementation("com.serenegiant:common:${commonLibVersion}") {
+//   		exclude module: 'support-v4'
+//   	}
 	implementation project(':libuvccamera')
 }
