--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:4.0.0'
     }
 }
 
@@ -16,7 +16,11 @@ allprojects {
 		maven { url 'https://maven.google.com' }
 		jcenter()
 		maven { url 'http://raw.github.com/saki4510t/libcommon/master/repository/' }
+		flatDir {
+			dirs project(':libuvccamera').file('src/main/libs')
+		}
     }
+
 }
 
 task clean(type: Delete) {
