--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -36,6 +36,11 @@ android {
     defaultConfig {
         minSdkVersion 14
 		targetSdkVersion versionTarget
+
+//		ndk {
+//			abiFilters  'armeabi-v7a','armeabi-v8a'
+//		}
+
     }
 
     buildTypes {
@@ -50,6 +55,13 @@ android {
 			jni.srcDirs = []
 		}
 	}
+
+	repositories {
+		flatDir {
+			dirs 'src/main/libs'
+		}
+	}
+
 }
 
 tasks.withType(JavaCompile) {
@@ -83,13 +95,14 @@ task ndkClean(type: Exec, description: 'clean JNI libraries') {
 
 clean.dependsOn 'ndkClean'
 
+
 dependencies {
     implementation fileTree(dir: new File(buildDir, 'libs'), include: '*.jar')
-
-	implementation "com.android.support:support-v4:${supportLibVersion}"
+	api(name:'common-2.12.4', ext:'aar')
+	api "com.android.support:appcompat-v7:${supportLibVersion}"
 	implementation "com.android.support:support-annotations:${supportLibVersion}"
-
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
+	//implementation(name:'common-2.12.4', ext:'aar')
+//	implementation("com.serenegiant:common:${commonLibVersion}") {
+//		exclude module: 'support-v4'
+//	}
 }
