--- a/usbCameraTest3/build.gradle
+++ b/usbCameraTest3/build.gradle
@@ -46,6 +46,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
     }
+
+
 }
 
 dependencies {
@@ -54,9 +56,9 @@ dependencies {
 	implementation "com.android.support:support-v4:${supportLibVersion}"
 	implementation "com.android.support:support-annotations:${supportLibVersion}"
 
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
+//	implementation("com.serenegiant:common:${commonLibVersion}") {
+//		exclude module: 'support-v4'
+//	}
 	implementation project(':libuvccamera')
 	implementation project(':usbCameraCommon')
 }
