--- a/usbCameraTest5/src/main/AndroidManifest.xml
+++ b/usbCameraTest5/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:theme="@style/AppTheme"
             android:name="com.serenegiant.usbcameratest5.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
