--- a/usbCameraTest7/build.gradle
+++ b/usbCameraTest7/build.gradle
@@ -48,6 +48,9 @@ android {
     }
     compileOptions {
     }
+
+
+
 }
 
 dependencies {
@@ -56,9 +59,9 @@ dependencies {
 	implementation "com.android.support:support-v4:${supportLibVersion}"
 	implementation "com.android.support:support-annotations:${supportLibVersion}"
 
-	implementation("com.serenegiant:common:${commonLibVersion}") {
-		exclude module: 'support-v4'
-	}
+//	implementation("com.serenegiant:common:${commonLibVersion}") {
+//		exclude module: 'support-v4'
+//	}
 	implementation project(':libuvccamera')
 	implementation project(':usbCameraCommon')
 }
