--- a/usbCameraTest7/src/main/AndroidManifest.xml
+++ b/usbCameraTest7/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:theme="@style/AppTheme"
             android:name="com.serenegiant.usbcameratest7.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorLandscape" >
