--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -37,10 +37,15 @@ android {
         minSdkVersion 14
 		targetSdkVersion versionTarget
 
-//		ndk {
-//			abiFilters  'armeabi-v7a','armeabi-v8a'
-//		}
+		ndk {
+			abiFilters  'armeabi-v7a','arm64-v8a'
+		}
 
+		externalNativeBuild {
+			cmake {
+				cppFlags ""
+			}
+		}
     }
 
     buildTypes {
@@ -58,15 +63,21 @@ android {
 
 	repositories {
 		flatDir {
-			dirs 'src/main/libs'
+			dirs 'jni/libuvc/libs'
+		}
+	}
+
+	externalNativeBuild {
+		ndkBuild {
+			path "src/main/jni/Android.mk"
 		}
 	}
 
 }
 
-tasks.withType(JavaCompile) {
-	compileTask -> compileTask.dependsOn ndkBuild
-}
+//tasks.withType(JavaCompile) {
+//	compileTask -> compileTask.dependsOn ndkBuild
+//}
 
 String getNdkBuildPath() {
 	Properties properties = new Properties()
@@ -93,7 +104,7 @@ task ndkClean(type: Exec, description: 'clean JNI libraries') {
 	commandLine ndkBuildPath, 'clean', '-C', file('src/main').absolutePath
 }
 
-clean.dependsOn 'ndkClean'
+//clean.dependsOn 'ndkClean'
 
 
 dependencies {
