--- a/usbCameraTest2/src/main/AndroidManifest.xml
+++ b/usbCameraTest2/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:theme="@style/AppTheme"
             android:name="com.serenegiant.usbcameratest2.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
