--- a/usbCameraTest8/src/main/AndroidManifest.xml
+++ b/usbCameraTest8/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 		android:supportsRtl="true"
 		android:theme="@style/AppTheme">
 		<activity
+			android:theme="@style/AppTheme"
 			android:name=".MainActivity"
 			android:screenOrientation="sensorLandscape"
 			android:label="@string/app_name">
