--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -38,7 +38,7 @@ android {
 		targetSdkVersion versionTarget
 
 		ndk {
-			abiFilters  'armeabi-v7a','arm64-v8a'
+			abiFilters  'armeabi-v7a','arm64-v8a',"x86", "x86_64"
 		}
 
 		externalNativeBuild {
