--- a/usbCameraCommon/build.gradle
+++ b/usbCameraCommon/build.gradle
@@ -37,18 +37,18 @@ android {
         targetSdkVersion versionTarget
 
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
     }
-
 
 }
 
 dependencies {
-	api fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation "com.android.support:appcompat-v7:${supportLibVersion}"
 	implementation "com.android.support:support-annotations:${supportLibVersion}"
