--- a/usbCameraCommon/build.gradle
+++ b/usbCameraCommon/build.gradle
@@ -25,9 +25,8 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion versionCompiler
-   	buildToolsVersion versionBuildTool
 
-   	compileOptions {
+    compileOptions {
    		sourceCompatibility javaSourceCompatibility
    		targetCompatibility javaTargetCompatibility
    	}
@@ -44,6 +43,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
     }
+    namespace 'com.serenegiant.usbcameracommon'
 
 }
 
