--- a/usbCameraTest/src/main/AndroidManifest.xml
+++ b/usbCameraTest/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
   ~  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
   ~  may have a different license, see the respective files.
   -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.serenegiant.usbcameratest">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
