--- a/usbCameraTest0/src/main/AndroidManifest.xml
+++ b/usbCameraTest0/src/main/AndroidManifest.xml
@@ -21,8 +21,7 @@
   ~  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
   ~  may have a different license, see the respective files.
   -->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.serenegiant.usbcameratest0" >
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:allowBackup="true"
