--- a/usbCameraTest6/build.gradle
+++ b/usbCameraTest6/build.gradle
@@ -25,7 +25,6 @@ apply plugin: 'com.android.application'
 
 android {
 	compileSdkVersion versionCompiler
-	buildToolsVersion versionBuildTool
 
 	compileOptions {
 		sourceCompatibility javaSourceCompatibility
@@ -71,6 +70,7 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
 		}
 	}
+	namespace 'com.serenegiant.usbcameratest6'
 
 }
 
