--- a/usbCameraTest7/build.gradle
+++ b/usbCameraTest7/build.gradle
@@ -25,7 +25,6 @@ apply plugin: 'com.android.application'
 
 android {
 	compileSdkVersion versionCompiler
-	buildToolsVersion versionBuildTool
 
 	compileOptions {
 		sourceCompatibility javaSourceCompatibility
@@ -69,7 +68,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-project.txt'
         }
     }
-    compileOptions {
+	namespace 'com.serenegiant.usbcameratest7'
+	compileOptions {
     }
 
 
