--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     repositories {
-//		google()
-        //maven { url 'https://maven.google.com' }
-        jcenter()
         mavenCentral()
         google()
     }
@@ -15,10 +12,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        //maven { url 'https://maven.google.com' }
-        jcenter()
+        maven { url 'https://jitpack.io' }
         mavenCentral()
-        //maven { url 'http://raw.github.com/saki4510t/libcommon/master/repository/' }
         flatDir {
             dirs project(':libuvccamera').file('src/main/libs')
         }
