--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -31,7 +31,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 14
+        minSdkVersion 18
         targetSdkVersion versionTarget
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
@@ -52,15 +52,14 @@ android {
     }
     sourceSets {
         main {
-            jniLibs.srcDir 'src/main/libs'
+            jniLibs.srcDirs = ['libs']
         }
     }
-
-    repositories {
-        flatDir {
-            dirs 'jni/libuvc/libs'
-        }
-    }
+//    repositories {
+//        flatDir {
+//            dirs 'jni/libuvc/libs'
+//        }
+//    }
 
     externalNativeBuild {
         ndkBuild {
@@ -102,8 +101,4 @@ dependencies {
     api(name: 'common-2.12.4', ext: 'aar')
     api "com.android.support:appcompat-v7:${supportLibVersion}"
     implementation "com.android.support:support-annotations:${supportLibVersion}"
-    //implementation(name:'common-2.12.4', ext:'aar')
-//	implementation("com.serenegiant:common:${commonLibVersion}") {
-//		exclude module: 'support-v4'
-//	}
 }
