--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,10 @@ ext {
     supportLibVersion = '27.1.1'  // variable that can be referenced to keep support libs consistent
     commonLibVersion = '2.12.4'
     versionBuildTool = '30.0.2'
-    versionCompiler = 27
+    versionCompiler = 28
     versionTarget = 27
+    minSdkV = 23
+
     versionNameString = '1.0.0'
     javaSourceCompatibility = JavaVersion.VERSION_1_8
     javaTargetCompatibility = JavaVersion.VERSION_1_8
