--- a/usbCameraCommon/build.gradle
+++ b/usbCameraCommon/build.gradle
@@ -32,7 +32,7 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 18
+        minSdkVersion minSdkV
         targetSdkVersion versionTarget
 
     }
@@ -49,8 +49,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
-    implementation "com.android.support:support-annotations:${supportLibVersion}"
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.annotation:annotation:1.0.0'
     implementation(name: 'common-2.12.4', ext: 'aar')
     implementation project(':libuvccamera')
 }
