--- a/usbCameraTest8/build.gradle
+++ b/usbCameraTest8/build.gradle
@@ -33,12 +33,12 @@ android {
 
 	defaultConfig {
 		applicationId "com.serenegiant.usbcameratest8"
-		minSdkVersion 18
+		minSdkVersion minSdkV
 		targetSdkVersion versionTarget
 		versionCode 1
 		versionName "1.0"
 
-		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+		testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
 	}
 	buildTypes {
@@ -59,13 +59,13 @@ android {
 dependencies {
 	api fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation "com.android.support:support-v4:${supportLibVersion}"
-	implementation "com.android.support:support-annotations:${supportLibVersion}"
+	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+	implementation 'androidx.annotation:annotation:1.5.0'
 
-	androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
+	androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
-	testImplementation 'junit:junit:4.12'
+	testImplementation 'junit:junit:4.13.2'
 
 //	implementation("com.serenegiant:common:${commonLibVersion}") {
 //		exclude module: 'support-v4'
