--- a/usbCameraTest9/build.gradle
+++ b/usbCameraTest9/build.gradle
@@ -37,7 +37,9 @@ android {
         targetSdkVersion versionTarget
         versionCode 1
         versionName "1.0"
-
+        ndk {
+            abiFilters 'armeabi-v7a'
+        }
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
