--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -34,7 +34,8 @@ android {
         minSdkVersion minSdkV
         targetSdkVersion versionTarget
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a'
+            //abiFilters 'armeabi-v7a', 'arm64-v8a'
+            abiFilters 'armeabi-v7a'
         }
 
         externalNativeBuild {
