--- a/usbCameraTest9/build.gradle
+++ b/usbCameraTest9/build.gradle
@@ -43,10 +43,36 @@ android {
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
-    buildTypes {
+    signingConfigs {
+        debug {
+            storeFile file('../appKey')
+            storePassword '12345678'
+            keyAlias 'DDG'
+            keyPassword '12345678'
+        }
         release {
+            storeFile file('../appKey')
+            storePassword '12345678'
+            keyAlias 'DDG'
+            keyPassword '12345678'
+        }
+    }
+    buildTypes {
+        debug{
+            jniDebuggable true
+            jniDebuggable = true
+
+            signingConfig signingConfigs.debug
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
+        release {
+            jniDebuggable true
+            jniDebuggable = true
+            signingConfig signingConfigs.release
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     repositories {
@@ -61,6 +87,7 @@ android {
 dependencies {
     api fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.annotation:annotation:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
     androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
