--- a/usbCameraTest3/build.gradle
+++ b/usbCameraTest3/build.gradle
@@ -77,8 +77,9 @@ android {
 dependencies {
 	api fileTree(dir: 'libs', include: ['*.jar'])
 
+	implementation 'androidx.appcompat:appcompat:1.5.1'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-	implementation 'androidx.annotation:annotation:1.0.0'
+	implementation 'androidx.annotation:annotation:1.5.0'
 
 //	implementation("com.serenegiant:common:${commonLibVersion}") {
 //		exclude module: 'support-v4'
