--- a/usbCameraTest4/build.gradle
+++ b/usbCameraTest4/build.gradle
@@ -80,6 +80,7 @@ dependencies {
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.annotation:annotation:1.0.0'
 
+	implementation 'androidx.appcompat:appcompat:1.5.1'
 //	implementation("com.serenegiant:common:${commonLibVersion}") {
 //		exclude module: 'support-v4'
 //	}
