--- a/usbCameraTest5/build.gradle
+++ b/usbCameraTest5/build.gradle
@@ -76,6 +76,7 @@ android {
 dependencies {
 	api fileTree(dir: 'libs', include: ['*.jar'])
 
+	implementation 'androidx.appcompat:appcompat:1.5.1'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.annotation:annotation:1.0.0'
 
