--- a/usbCameraTest8/build.gradle
+++ b/usbCameraTest8/build.gradle
@@ -59,6 +59,7 @@ android {
 dependencies {
 	api fileTree(dir: 'libs', include: ['*.jar'])
 
+	implementation 'androidx.appcompat:appcompat:1.5.1'
 	implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 	implementation 'androidx.annotation:annotation:1.5.0'
 
