--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -93,7 +93,7 @@ task ndkClean(type: Exec, description: 'clean JNI libraries') {
 
 
 dependencies {
-    implementation fileTree(dir: new File(buildDir, 'libs'), include: '*.jar')
+    implementation fileTree(dir: new File(buildDir, 'libs'), include: ['*.jar', '*.aar'])
     api(name: 'common-2.12.4', ext: 'aar')
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.annotation:annotation:1.5.0'
