--- a/usbCameraCommon/build.gradle
+++ b/usbCameraCommon/build.gradle
@@ -48,8 +48,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation(name: 'common-2.12.4', ext: 'aar')
+    implementation fileTree(dir: new File(buildDir, 'libs'), include: ['*.jar', '*.aar'])
     implementation project(':libuvccamera')
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
