--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -62,13 +62,8 @@ android {
             path "src/main/jni/Android.mk"
         }
     }
-    namespace 'com.serenegiant.uvccamera'
-
+    namespace 'com.serenegiant.libuvccamera'
 }
-
-//tasks.withType(JavaCompile) {
-//	compileTask -> compileTask.dependsOn ndkBuild
-//}
 
 String getNdkBuildPath() {
     Properties properties = new Properties()
@@ -89,12 +84,9 @@ task ndkClean(type: Exec, description: 'clean JNI libraries') {
     commandLine ndkBuildPath, 'clean', '-C', file('src/main').absolutePath
 }
 
-//clean.dependsOn 'ndkClean'
-
 
 dependencies {
-    implementation fileTree(dir: new File(buildDir, 'libs'), include: ['*.jar', '*.aar'])
-   // api(name: 'common-2.12.4', ext: 'aar')
+    implementation fileTree(dir: new File(buildDir, 'libs'), include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'androidx.annotation:annotation:1.5.0'
 }
