--- a/usbCameraCommon/build.gradle
+++ b/usbCameraCommon/build.gradle
@@ -34,7 +34,6 @@ android {
     defaultConfig {
         minSdkVersion minSdkV
         targetSdkVersion versionTarget
-
     }
 
     buildTypes {
@@ -48,7 +47,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: new File(buildDir, 'libs'), include: ['*.jar', '*.aar'])
+    implementation fileTree(dir: new File(buildDir, 'libs'), include: ['*.jar'])
     implementation project(':libuvccamera')
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
