--- a/usbCameraTest9/build.gradle
+++ b/usbCameraTest9/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion versionCompiler
-
+    ndkVersion '25.1.8937393'
     compileOptions {
         sourceCompatibility javaSourceCompatibility
         targetCompatibility javaTargetCompatibility
@@ -38,11 +38,11 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters 'armeabi-v7a'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-
     }
+
     signingConfigs {
         debug {
             storeFile file('../appKey')
@@ -58,7 +58,7 @@ android {
         }
     }
     buildTypes {
-        debug{
+        debug {
             jniDebuggable true
             jniDebuggable = true
             signingConfig signingConfigs.debug
@@ -79,8 +79,8 @@ android {
             dirs 'libs'
         }
     }
-    namespace 'com.serenegiant.usbcameratest9'
 
+    namespace 'com.serenegiant.usbcameratest9'
 }
 
 dependencies {
@@ -88,12 +88,13 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
 
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     testImplementation 'junit:junit:4.13.2'
 
     implementation project(':libuvccamera')
     implementation project(':usbCameraCommon')
-    implementation 'com.github.pcyfox:Seeta6-Android:V1.0.5'
+
+    implementation 'com.github.pcyfox:Seeta6-Android:V1.0.16'
 }
