--- a/usbCameraTest9/src/main/AndroidManifest.xml
+++ b/usbCameraTest9/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".AutoOpenActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorLandscape"
             android:theme="@style/AppTheme">
