--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'com.android.library'
  *  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
  *  may have a different license, see the respective files.
  */
-
+apply plugin: 'kotlin-android'
 android {
     compileSdkVersion versionCompiler
     ndkVersion '25.1.8937393'
