--- a/usbCameraTest9/src/main/AndroidManifest.xml
+++ b/usbCameraTest9/src/main/AndroidManifest.xml
@@ -1,25 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-  ~  UVCCamera
-  ~  library and sample to access to UVC web camera on non-rooted Android device
-  ~
-  ~ Copyright (c) 2014-2017 saki t_saki@serenegiant.com
-  ~
-  ~  Licensed under the Apache License, Version 2.0 (the "License");
-  ~  you may not use this file except in compliance with the License.
-  ~   You may obtain a copy of the License at
-  ~
-  ~      http://www.apache.org/licenses/LICENSE-2.0
-  ~
-  ~   Unless required by applicable law or agreed to in writing, software
-  ~   distributed under the License is distributed on an "AS IS" BASIS,
-  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  ~   See the License for the specific language governing permissions and
-  ~   limitations under the License.
-  ~
-  ~  All files in the folder are under this Apache License, Version 2.0.
-  ~  Files in the libjpeg-turbo, libusb, libuvc, rapidjson folder
-  ~  may have a different license, see the respective files.
-  -->
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -30,22 +9,27 @@
         android:required="true" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".AutoOpenActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="sensorLandscape"
-            android:theme="@style/AppTheme">
+            android:name=".USBCameraActivity"
+            android:exported="false" />
+        <activity android:name=".TestActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".AutoOpenActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="sensorLandscape"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
